# GenX_FX

./: .env.example  .gitignore  .gitpod.yml  AUTHENTICATION_SUMMARY.md  COMPLETE_GITHUB_SECRETS_SETUP.md  CURSOR_EXTENSIONS.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT_SUMMARY.md  GITHUB_SECRETS_GUIDE.md  GITHUB_TOKEN_AWS_DEPLOYMENT.md  GenX_FX.code-workspace  README.md  SETUP_COMPLETE.md  amp-tasks.py  amp_auth.py  auto_setup_github_secrets.sh  complete-github-setup.py  container_setup.sh  deploy_amp_gcs.sh  deploy_genx.sh  deploy_genx_fixed.sh  direct_aws_deploy.sh  docker-compose.amp.yml  docker-compose.simple.yml  firebase.json  forexconnect_example.py  forexconnect_example_correct.py  google-drive-deploy.py  local_setup.sh  package-lock.json  package.json  pyproject.toml  requirements-cloud.txt  requirements-free-tier.txt  requirements-prod.txt  requirements-vercel.txt  requirements.txt  setup-all-secrets.py  setup_api_keys.sh  setup_environment_secrets.py  (+9 more)
.cursor/: rules  settings.json
.github/workflows/: ci-cd.yml  test.yml
amp-plugins/: reddit-signals.md
api/: config.py  main.py
api/services/: enhanced_gemini_service.py
aws/: amp-deploy.sh
aws/terraform/: user_data.sh
config/: trading_config.json
core/strategies/tests/: test_bybit.py  test_indicators.py
services/server/tests/: server-comprehensive.test.ts
src/: main.py
utils/: config.py  config_manager.py
