[project]
name = "genx-fx"
version = "0.1.0"
description = "Advanced AI-Powered Forex & Cryptocurrency Trading System"
authors = [
    {name = "Mouy-leng",email = "noreply@github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "aiodns (==3.5.0)",
    "aiofiles (==23.2.1)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.15)",
    "aiosignal (==1.4.0)",
    "alembic (==1.16.5)",
    "alpha-vantage (==2.3.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "asyncio-mqtt (==0.16.2)",
    "attrs (==25.3.0)",
    "bcrypt (==5.0.0)",
    "beautifulsoup4 (==4.14.0)",
    "build (==1.3.0)",
    "cachetools (==5.5.2)",
    "ccxt (==4.5.6)",
    "certifi (==2025.8.3)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.3)",
    "click (==8.3.0)",
    "contourpy (==1.3.3)",
    "coverage (==7.10.7)",
    "cryptography (==46.0.1)",
    "curl-cffi (==0.13.0)",
    "cycler (==0.12.1)",
    "cython (==3.1.4)",
    "dateparser (==1.2.2)",
    "dparse (==0.6.4)",
    "ecdsa (==0.19.1)",
    "et-xmlfile (==2.0.0)",
    "fastapi (==0.117.1)",
    "finnhub-python (==2.4.25)",
    "fonttools (==4.60.0)",
    "frozendict (==2.4.6)",
    "frozenlist (==1.7.0)",
    "google-ai-generativelanguage (==0.6.15)",
    "google-api-core (==2.25.1)",
    "google-api-python-client (==2.183.0)",
    "google-auth (==2.40.3)",
    "google-auth-httplib2 (==0.2.0)",
    "google-generativeai (==0.8.5)",
    "googleapis-common-protos (==1.70.0)",
    "greenlet (==3.2.4)",
    "grpcio (==1.75.1)",
    "grpcio-status (==1.71.2)",
    "gunicorn (==23.0.0)",
    "h11 (==0.16.0)",
    "httplib2 (==0.31.0)",
    "httptools (==0.6.4)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "joblib (==1.5.2)",
    "kiwisolver (==1.4.9)",
    "lightgbm (==4.6.0)",
    "loguru (==0.7.3)",
    "mako (==1.3.10)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.6)",
    "mccabe (==0.7.0)",
    "mdurl (==0.1.2)",
    "mplfinance (==0.12.10b0)",
    "multidict (==6.6.4)",
    "multitasking (==0.0.12)",
    "mypy-extensions (==1.1.0)",
    "newsapi-python (==0.2.7)",
    "numpy (==1.26.4)",
    "nvidia-nccl-cu12 (==2.28.3)",
    "openpyxl (==3.1.5)",
    "packaging (==25.0)",
    "paho-mqtt (==2.1.0)",
    "pandas (==2.3.2)",
    "passlib (==1.7.4)",
    "pathspec (==0.12.1)",
    "patsy (==1.0.1)",
    "peewee (==3.18.2)",
    "pillow (==11.3.0)",
    "platformdirs (==4.4.0)",
    "pluggy (==1.6.0)",
    "praw (==7.8.1)",
    "prawcore (==2.4.0)",
    "propcache (==0.3.2)",
    "proto-plus (==1.26.1)",
    "protobuf (==5.29.5)",
    "psutil (==5.9.8)",
    "pyasn1 (==0.6.1)",
    "pyasn1-modules (==0.4.2)",
    "pycares (==4.11.0)",
    "pycodestyle (==2.11.1)",
    "pycparser (==2.23)",
    "pycryptodome (==3.23.0)",
    "pydantic (==2.11.9)",
    "pydantic-settings (==2.11.0)",
    "pydantic-core (==2.33.2)",
    "pyflakes (==3.1.0)",
    "pygments (==2.19.2)",
    "pyparsing (==3.2.5)",
    "pyproject-hooks (==1.2.0)",
    "python-binance (==1.0.29)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "python-jose (==3.5.0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.3)",
    "redis (==4.6.0)",
    "regex (==2025.9.18)",
    "requests (==2.32.5)",
    "rich (==14.1.0)",
    "rsa (==4.9.1)",
    "ruamel-yaml (==0.18.15)",
    "ruamel-yaml-clib (==0.2.14)",
    "safety (==2.3.4)",
    "scikit-learn (==1.7.2)",
    "scipy (==1.16.2)",
    "seaborn (==0.13.2)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.8)",
    "sqlalchemy (==2.0.43)",
    "starlette (==0.48.0)",
    "statsmodels (==0.14.5)",
    "stevedore (==5.5.0)",
    "ta-lib (==0.6.7)",
    "threadpoolctl (==3.6.0)",
    "tqdm (==4.67.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "tzlocal (==5.3.1)",
    "update-checker (==0.18.0)",
    "uritemplate (==4.2.0)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.37.0)",
    "uvloop (==0.21.0)",
    "watchfiles (==1.1.0)",
    "websocket-client (==1.8.0)",
    "websockets (==11.0.3)",
    "xgboost (==3.0.5)",
    "xlsxwriter (==3.2.9)",
    "yarl (==1.20.1)",
    "yfinance (==0.2.59)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = "==25.9.0"
flake8 = "==6.1.0"
isort = "==5.13.2"
bandit = "==1.8.6"
mypy = ">=1.18.2,<2.0.0"
pip-audit = ">=2.9.0,<3.0.0"
pytest = "==7.4.4"
pytest-cov = "==4.1.0"
pytest-asyncio = "==0.23.8"
httpx = ">=0.28.1,<0.29.0"
pybit = ">=5.11.0,<6.0.0"
pytest-mock = ">=3.15.1,<4.0.0"
